src/objects/Certification_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Reimbursed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Amount Reimbursed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Certificate_Number__c</fullName>
        <label>Certificate Number</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Certification_Date__c</fullName>
        <label>Certification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certification_Type__c</fullName>
        <label>Certification Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fresh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Certification__c</fullName>
        <label>Certification</label>
        <picklist>
            <picklistValues>
                <fullName>ADM (201)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced ADM (301)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer (401)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Developer (501)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Cloud Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Cloud Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Certification_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reimbursement_Date__c</fullName>
        <label>Reimbursement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Season__c</fullName>
        <label>Season</label>
        <picklist>
            <picklistValues>
                <fullName>Spring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Certification Tracker</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Employee_Name__c</columns>
        <columns>NAME</columns>
        <columns>Certification__c</columns>
        <columns>Certification_Type__c</columns>
        <columns>Certification_Date__c</columns>
        <columns>Certificate_Number__c</columns>
        <columns>Season__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Certifications</label>
    </listViews>
    <nameField>
        <label>Certification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Certification Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>